# velma_roko_control

./: README.md
visual_servo_end_effector/: CMakeLists.txt  package.xml
visual_servo_end_effector/config/: visual_servo_end_effector.xml
visual_servo_end_effector/launch/: visual_servo_end_effector.launch
visual_servo_end_effector/scripts/: plot_visual_servo_fake_manip_strategy.py  test_visual_servo_fake_manip_strategy.py
visual_servo_end_effector/spec/: subsystem.xml
visual_servo_end_effector/src/: predicates.cpp
visual_servo_end_effector/src/components/: delay_test.cpp  ext_commands.cpp  manipulation_strategy.cpp  visual_servo_end_effector.cpp  visual_servo_fake_end_effector.cpp
visual_servo_head/: CMakeLists.txt  package.xml
visual_servo_head/config/: visual_servo_head.xml
visual_servo_head/launch/: visual_servo_head.launch
visual_servo_head/spec/: subsystem.xml
visual_servo_head/src/: predicates.cpp
visual_servo_head/src/components/: ext_commands.cpp  visual_servo_head.cpp
